--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -30,6 +30,9 @@ jobs:
         id: qemu
         uses: docker/setup-qemu-action@v1
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Log into Docker Hub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
