--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,10 +4,8 @@ on:
   schedule:
     - cron: '19 17 * * *' # Nightly builds capture upstream updates to dependency images such as node.
   push:
-    branches: [ master ]
+    branches: [ master, '*.*.*' ]
     tags: [ '*.*.*' ]
-  pull_request:
-    branches: [ master ]
 
 env:
   REGISTRY: docker.io
@@ -22,6 +20,10 @@ jobs:
       packages: write
 
     steps:
+      - name: Determine branch name
+        id: branch
+        run: echo ::set-output name=branch_name::${GITHUB_REF#refs/*/}        
+
       - name: Checkout repository
         uses: actions/checkout@v2
 
@@ -45,7 +47,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           flavor: |
-            latest=true
+            latest=${{ steps.branch.branch_name == 'master' }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
