--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     - cron: '19 17 * * *' # Nightly builds capture upstream updates to dependency images such as node.
   push:
-    branches: [ master, '*.*.*' ]
+    branches: [ master, 'release-*.*.*' ]
     tags: [ '*.*.*' ]
 
 env:
