--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,9 +2,10 @@ name: docker
 
 on:
   schedule:
-    - cron: '19 17 * * *' # Nightly builds capture upstream updates to dependency images such as node.
+    # Nightly builds capture upstream updates to dependency images such as node.
+    - cron: '19 17 * * *'
   push:
-    branches: [ master, 'release-*.*.*' ]
+    branches: [ master ]
     tags: [ '*.*.*' ]
 
 env:
@@ -22,7 +23,7 @@ jobs:
     steps:
       - name: Determine branch name
         id: branch
-        run: echo ::set-output name=branch_name::${GITHUB_REF#refs/*/}        
+        run: echo "::set-output name=branch_name::${GITHUB_REF#refs/*/}"
 
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -47,7 +48,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           flavor: |
-            latest=${{ steps.branch.branch_name == 'master' }}
+            latest=${{ steps.branch.outputs.branch_name == 'master' }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
