--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
     "yaml": "1.10.0"
   },
   "scripts": {
-    "ci:check": "node ./resources/ci/ciCheck.js",
+    "ci:check": "node ./ci/ciCheck.js",
+    "ci:checkNodeEngine": "node ./ci/nodeEngineCheck.js",
     "definitions": "node ./resources/buildConfigDefinitions.js && prettier --write 'src/Options/*.js'",
     "docs": "jsdoc -c ./jsdoc-conf.json",
     "lint": "flow && eslint --cache ./",
