ci: add node engine check (#7574)
* add issue bot for prs

* Update CHANGELOG.md

* Update issue-bot.yml

* replace node 15 with node 16

* Update CHANGELOG.md

* use node 16 as default node version

* ignore node 15 in ci self-check

* bumped madge for node deprecation DEP0148

* ci: add node engine check

* lint

* bump node engine

* Update ci.yml

* revert unnecessary changes

* Update CHANGELOG.md

* Update ci.yml

--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "jsdoc": "3.6.3",
     "jsdoc-babel": "0.5.0",
     "lint-staged": "10.2.3",
-    "madge": "4.0.2",
+    "madge": "5.0.1",
     "mock-files-adapter": "file:spec/dependencies/mock-files-adapter",
     "mock-mail-adapter": "file:spec/dependencies/mock-mail-adapter",
     "mongodb-runner": "4.8.1",
@@ -101,7 +101,8 @@
     "yaml": "1.10.0"
   },
   "scripts": {
-    "ci:check": "node ./resources/ci/ciCheck.js",
+    "ci:check": "node ./ci/ciCheck.js",
+    "ci:checkNodeEngine": "node ./ci/nodeEngineCheck.js",
     "definitions": "node ./resources/buildConfigDefinitions.js && prettier --write 'src/Options/*.js'",
     "docs": "jsdoc -c ./jsdoc-conf.json",
     "lint": "flow && eslint --cache ./",
@@ -127,7 +128,7 @@
     "madge:circular": "node_modules/.bin/madge ./src --circular"
   },
   "engines": {
-    "node": ">= 8"
+    "node": ">=12.20.0"
   },
   "bin": {
     "parse-server": "bin/parse-server"
