--- a/.github/workflows/release-manual-docker.yml
+++ b/.github/workflows/release-manual-docker.yml
@@ -42,14 +42,11 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          # The following parameter is modified to manually make pre-releases on the `master` branch;
-          # change this accordingly before adding release automation.
           flavor: |
-            latest=false
-          # The following parameter is modified to manually make pre-releases on the `master` branch;
-          # change this accordingly before adding release automation.
+            latest=${{ steps.branch.outputs.branch_name == 'release' && github.event.inputs.ref == '' }}
           tags: |
             type=semver,enable=true,pattern={{version}},value=${{ github.event.inputs.ref }}
+            type=raw,enable=${{ github.event.inputs.ref == '' }},value=latest
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
