ci: disable npm publishing on release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,9 +19,10 @@ jobs:
           restore-keys: |
               ${{ runner.os }}-node-
       - run: npm ci
-      - run: npm publish --tag alpha
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+# Disable publishing until release automation; enable ad-hoc with correct npm tag (alpha, beta)
+#      - run: npm publish --tag alpha
+#        env:
+#          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
   publish-docs:
     runs-on: ubuntu-18.04
     timeout-minutes: 30
