--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ env:
   PARSE_SERVER_TEST_TIMEOUT: 20000
 jobs:
   check-ci:
-    name: CI Self-Check
+    name: Node Engine Check
     timeout-minutes: 15
     runs-on: ubuntu-18.04
     steps:
@@ -29,8 +29,6 @@ jobs:
             ${{ runner.os }}-node-${{ matrix.NODE_VERSION }}-
       - name: Install dependencies
         run: npm ci
-      - name: CI Environments Check
-        run: npm run ci:check
       - name: CI Node Engine Check
         run: npm run ci:checkNodeEngine
   check-changelog:
