Build CI with Postgres 14

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -182,15 +182,23 @@ jobs:
         include:
           - name: PostgreSQL 11, PostGIS 3.0
             POSTGRES_IMAGE: postgis/postgis:11-3.0
+            POSTGRES_VERSION: 11.13.0
             NODE_VERSION: 14.18.1
           - name: PostgreSQL 11, PostGIS 3.1
             POSTGRES_IMAGE: postgis/postgis:11-3.1
+            POSTGRES_VERSION: 11.13.0
             NODE_VERSION: 14.18.1
           - name: PostgreSQL 12, PostGIS 3.1
             POSTGRES_IMAGE: postgis/postgis:12-3.1
+            POSTGRES_VERSION: 12.8.0
             NODE_VERSION: 14.18.1
           - name: PostgreSQL 13, PostGIS 3.1
             POSTGRES_IMAGE: postgis/postgis:13-3.1
+            POSTGRES_VERSION: 13.4.0
+            NODE_VERSION: 14.18.1
+          - name: PostgreSQL 14, PostGIS 3.1
+            POSTGRES_IMAGE: postgis/postgis:14-3.1
+            POSTGRES_VERSION: 14.0.0
             NODE_VERSION: 14.18.1
       fail-fast: false
     name: ${{ matrix.name }}
@@ -231,7 +239,9 @@ jobs:
             ${{ runner.os }}-node-${{ matrix.NODE_VERSION }}-
       - name: Install dependencies
         run: npm ci
-      - run: bash scripts/before_script_postgres.sh
+      - run: |
+          bash scripts/before_script_postgres_conf.sh
+          bash scripts/before_script_postgres.sh
       - run: npm run coverage
         env:
           CI: true
