try config script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -241,6 +241,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - run: |
+          bash scripts/before_script_postgres_conf.sh
           bash scripts/before_script_postgres.sh
       - run: npm run coverage
         env:
