--- a/package.json
+++ b/package.json
@@ -68,6 +68,12 @@
     "@babel/plugin-transform-flow-strip-types": "7.9.0",
     "@babel/preset-env": "7.10.0",
     "@parse/minami": "1.0.0",
+    "@semantic-release/changelog": "5.0.1",
+    "@semantic-release/commit-analyzer": "8.0.1",
+    "@semantic-release/git": "9.0.0",
+    "@semantic-release/github": "7.2.3",
+    "@semantic-release/npm": "7.1.3",
+    "@semantic-release/release-notes-generator": "9.0.3",
     "all-node-versions": "8.0.0",
     "apollo-cache-inmemory": "1.6.6",
     "apollo-client": "2.6.10",
@@ -98,6 +104,7 @@
     "node-fetch": "2.6.1",
     "nyc": "15.1.0",
     "prettier": "2.0.5",
+    "semantic-release": "17.4.6",
     "yaml": "1.10.0"
   },
   "scripts": {
