--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,6 +78,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build docker image
         uses: docker/build-push-action@v2
+        with:
+          platforms: linux/amd64, linux/arm/v6, linux/arm/v7, linux/arm64/v8
   check-lock-file-version:
     name: NPM Lock File Version
     timeout-minutes: 5
