--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,10 @@ jobs:
     timeout-minutes: 15
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Build docker image
         uses: docker/build-push-action@v2
         with:
@@ -85,8 +88,6 @@ jobs:
     timeout-minutes: 5
     runs-on: ubuntu-18.04
     steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
       - uses: actions/checkout@v2
       - name: Check NPM lock file version
         uses: mansona/npm-lockfile-version@v1
