--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,6 +82,7 @@ jobs:
       - name: Build docker image
         uses: docker/build-push-action@v2
         with:
+          context: .
           platforms: linux/amd64, linux/arm/v6, linux/arm/v7, linux/arm64/v8
   check-lock-file-version:
     name: NPM Lock File Version
