--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,9 +75,18 @@ jobs:
     timeout-minutes: 15
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up QEMU
+        id: qemu
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Build docker image
         uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/amd64
   check-lock-file-version:
     name: NPM Lock File Version
     timeout-minutes: 5
