--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "form-data": "3.0.0",
     "husky": "4.2.5",
     "jasmine": "3.5.0",
-    "jasmine-spec-reporter": "^7.0.0",
+    "jasmine-spec-reporter": "7.0.0",
     "jsdoc": "3.6.7",
     "jsdoc-babel": "0.5.0",
     "lint-staged": "10.2.3",
