--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,6 +101,11 @@ jobs:
     strategy:
       matrix:
         include:
+          - name: MongoDB 5.1, ReplicaSet, WiredTiger
+            MONGODB_VERSION: 5.1.0
+            MONGODB_TOPOLOGY: replicaset
+            MONGODB_STORAGE_ENGINE: wiredTiger
+            NODE_VERSION: 14.18.1
           - name: MongoDB 5.0, ReplicaSet, WiredTiger
             MONGODB_VERSION: 5.0.3
             MONGODB_TOPOLOGY: replicaset
