--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -196,6 +196,11 @@ jobs:
           - name: PostgreSQL 14, PostGIS 3.1
             POSTGRES_IMAGE: postgis/postgis:14-3.1
             NODE_VERSION: 16.13.0
+          - name: Node 17
+            MONGODB_VERSION: 4.4.10
+            MONGODB_TOPOLOGY: standalone
+            MONGODB_STORAGE_ENGINE: wiredTiger
+            NODE_VERSION: 17.1.0
       fail-fast: false
     name: ${{ matrix.name }}
     timeout-minutes: 15
