--- a/package.json
+++ b/package.json
@@ -91,7 +91,14 @@
     "mongodb-runner": "mongodb-js/runner",
     "node-fetch": "2.6.1",
     "nyc": "15.1.0",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "@semantic-release/changelog": "5.0.1",
+    "@semantic-release/commit-analyzer": "8.0.1",
+    "@semantic-release/git": "9.0.0",
+    "@semantic-release/github": "7.2.3",
+    "@semantic-release/npm": "7.1.3",
+    "@semantic-release/release-notes-generator": "9.0.3",
+    "semantic-release": "17.4.6"
   },
   "scripts": {
     "definitions": "node ./resources/buildConfigDefinitions.js",
