--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "lodash": "4.17.21",
     "lru-cache": "5.1.1",
     "mime": "2.4.6",
-    "mongodb": "3.6.11",
+    "mongodb": "4.3.1",
     "parse": "3.3.0",
     "pg-promise": "10.8.1",
     "pluralize": "8.0.0",
@@ -67,6 +67,12 @@
     "@babel/plugin-transform-flow-strip-types": "7.9.0",
     "@babel/preset-env": "7.10.0",
     "@parse/minami": "1.0.0",
+    "@semantic-release/changelog": "5.0.1",
+    "@semantic-release/commit-analyzer": "8.0.1",
+    "@semantic-release/git": "9.0.0",
+    "@semantic-release/github": "7.2.3",
+    "@semantic-release/npm": "7.1.3",
+    "@semantic-release/release-notes-generator": "9.0.3",
     "apollo-cache-inmemory": "1.6.6",
     "apollo-client": "2.6.10",
     "apollo-link": "1.2.14",
@@ -88,16 +94,10 @@
     "jsdoc": "3.6.7",
     "jsdoc-babel": "0.5.0",
     "lint-staged": "10.2.3",
-    "mongodb-runner": "mongodb-js/runner",
+    "mongodb-runner": "4.8.1",
     "node-fetch": "2.6.1",
     "nyc": "15.1.0",
     "prettier": "2.0.5",
-    "@semantic-release/changelog": "5.0.1",
-    "@semantic-release/commit-analyzer": "8.0.1",
-    "@semantic-release/git": "9.0.0",
-    "@semantic-release/github": "7.2.3",
-    "@semantic-release/npm": "7.1.3",
-    "@semantic-release/release-notes-generator": "9.0.3",
     "semantic-release": "17.4.6"
   },
   "scripts": {
