--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parse-server",
-  "version": "5.0.0-alpha.22.moumouls",
+  "version": "5.0.0-alpha.22.moumouls-collation",
   "description": "An express module providing a Parse-compatible API server",
   "main": "lib/index.js",
   "repository": {
