--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
   "dependencies": {
     "@apollo/client": "3.5.10",
     "@apollographql/graphql-playground-html": "1.6.29",
-    "@graphql-tools/links": "8.2.9",
-    "@graphql-tools/stitch": "6.2.4",
-    "@graphql-tools/utils": "6.2.4",
+    "@graphql-tools/links": "8.2.14",
+    "@graphql-tools/merge": "8.2.10",
+    "@graphql-tools/schema": "8.3.10",
+    "@graphql-tools/utils": "8.6.9",
     "@parse/fs-files-adapter": "1.2.2",
     "@parse/push-adapter": "4.1.2",
-    "apollo-server-express": "2.25.2",
+    "apollo-server-express": "3.6.7",
     "bcryptjs": "2.4.3",
     "body-parser": "1.20.0",
     "commander": "5.1.0",
@@ -34,11 +35,10 @@
     "deepcopy": "2.1.0",
     "express": "4.17.2",
     "follow-redirects": "1.14.9",
-    "graphql": "15.8.0",
+    "graphql": "16.4.0",
     "graphql-list-fields": "2.0.2",
-    "graphql-relay": "0.7.0",
-    "graphql-tag": "2.12.6",
-    "graphql-upload": "11.0.0",
+    "graphql-relay": "0.10.0",
+    "graphql-upload": "13.0.0",
     "intersect": "1.0.1",
     "jsonwebtoken": "8.5.1",
     "jwks-rsa": "2.0.5",
@@ -62,6 +62,7 @@
     "ws": "8.2.3"
   },
   "devDependencies": {
+    "graphql-tag": "2.12.6",
     "@actions/core": "1.2.6",
     "@babel/cli": "7.10.0",
     "@babel/core": "7.10.0",
