--- a/spec/.eslintrc.json
+++ b/spec/.eslintrc.json
@@ -18,10 +18,13 @@
       "it_only_db": true,
       "it_only_mongodb_version": true,
       "it_only_postgres_version": true,
+      "it_only_node_version": true,
       "fit_only_mongodb_version": true,
+      "fit_only_node_version": true,
       "it_exclude_mongodb_version": true,
       "it_exclude_postgres_version": true,
       "fit_exclude_mongodb_version": true,
+      "fit_exclude_node_version": true,
       "it_exclude_dbs": true,
       "describe_only_db": true,
       "describe_only": true,
@@ -31,11 +34,10 @@
       "jequal": true,
       "create": true,
       "arrayContains": true,
-      "expectAsync": true,
-      "databaseAdapter": true
+      "databaseAdapter": true,
     },
     "rules": {
       "no-console": [0],
-      "no-var": "error"
+      "no-var": "error",
     }
 }
