--- a/spec/.eslintrc.json
+++ b/spec/.eslintrc.json
@@ -34,10 +34,10 @@
       "jequal": true,
       "create": true,
       "arrayContains": true,
-      "databaseAdapter": true,
+      "databaseAdapter": true
     },
     "rules": {
       "no-console": [0],
-      "no-var": "error",
+      "no-var": "error"
     }
 }
