--- a/package.json
+++ b/package.json
@@ -19,14 +19,11 @@
   ],
   "license": "BSD-3-Clause",
   "dependencies": {
-    "@apollo/client": "3.5.10",
-    "@apollographql/graphql-playground-html": "1.6.29",
-    "@graphql-tools/links": "8.2.11",
     "@graphql-tools/stitch": "6.2.4",
     "@graphql-tools/utils": "6.2.4",
+    "@graphql-yoga/node": "2.6.0",
     "@parse/fs-files-adapter": "1.2.2",
     "@parse/push-adapter": "4.1.2",
-    "apollo-server-express": "2.25.2",
     "bcryptjs": "2.4.3",
     "body-parser": "1.20.0",
     "commander": "5.1.0",
@@ -38,7 +35,6 @@
     "graphql-list-fields": "2.0.2",
     "graphql-relay": "0.7.0",
     "graphql-tag": "2.12.6",
-    "graphql-upload": "11.0.0",
     "intersect": "1.0.1",
     "jsonwebtoken": "8.5.1",
     "jwks-rsa": "2.0.5",
@@ -63,6 +59,7 @@
   },
   "devDependencies": {
     "@actions/core": "1.2.6",
+    "@apollo/client": "3.6.1",
     "@babel/cli": "7.10.0",
     "@babel/core": "7.10.0",
     "@babel/plugin-proposal-object-rest-spread": "7.10.0",
@@ -98,7 +95,7 @@
     "mock-mail-adapter": "file:spec/dependencies/mock-mail-adapter",
     "mongodb-runner": "4.8.1",
     "mongodb-version-list": "1.0.0",
-    "node-fetch": "3.1.1",
+    "node-fetch": "3.2.4",
     "nyc": "15.1.0",
     "prettier": "2.0.5",
     "semantic-release": "17.4.6",
