--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   ],
   "license": "BSD-3-Clause",
   "dependencies": {
-    "@graphql-tools/stitch": "6.2.4",
-    "@graphql-tools/utils": "6.2.4",
     "@graphql-yoga/node": "2.6.0",
+    "@graphql-tools/merge": "8.2.11",
+    "@graphql-tools/schema": "8.3.11",
+    "@graphql-tools/utils": "8.6.10",
     "@parse/fs-files-adapter": "1.2.2",
     "@parse/push-adapter": "4.1.2",
     "bcryptjs": "2.4.3",
@@ -31,10 +32,10 @@
     "deepcopy": "2.1.0",
     "express": "4.18.1",
     "follow-redirects": "1.15.0",
-    "graphql": "15.8.0",
+    "graphql": "16.5.0",
     "graphql-list-fields": "2.0.2",
-    "graphql-relay": "0.7.0",
     "graphql-tag": "2.12.6",
+    "graphql-relay": "0.10.0",
     "intersect": "1.0.1",
     "jsonwebtoken": "8.5.1",
     "jwks-rsa": "2.1.2",
@@ -58,6 +59,7 @@
     "ws": "8.6.0"
   },
   "devDependencies": {
+    "graphql-tag": "2.12.6",
     "@actions/core": "1.2.6",
     "@apollo/client": "3.6.1",
     "@babel/cli": "7.10.0",
