--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   ],
   "license": "BSD-3-Clause",
   "dependencies": {
-    "@graphql-yoga/node": "2.6.0",
-    "@graphql-tools/utils": "8.10.0",
     "@graphql-tools/merge": "8.3.3",
     "@graphql-tools/schema": "9.0.1",
+    "@graphql-tools/utils": "8.10.0",
+    "@graphql-yoga/node": "2.13.13",
+    "@graphql-yoga/render-graphiql": "2.13.12",
     "@parse/fs-files-adapter": "1.2.2",
     "@parse/push-adapter": "4.1.2",
     "bcryptjs": "2.4.3",
@@ -34,8 +35,8 @@
     "follow-redirects": "1.15.1",
     "graphql": "16.5.0",
     "graphql-list-fields": "2.0.2",
-    "graphql-tag": "2.12.6",
     "graphql-relay": "0.10.0",
+    "graphql-tag": "2.12.6",
     "intersect": "1.0.1",
     "jsonwebtoken": "8.5.1",
     "jwks-rsa": "2.1.4",
