--- a/spec/.eslintrc.json
+++ b/spec/.eslintrc.json
@@ -34,7 +34,8 @@
       "jequal": true,
       "create": true,
       "arrayContains": true,
-      "databaseAdapter": true
+      "databaseAdapter": true,
+      "requestWithExpectedError": true
     },
     "rules": {
       "no-console": [0],
