Revert "feat: add parse server option fileUpload.fileTypes"
This reverts commit 16a9d0a375012a78a58e2e02dd11bf7af12d66ef.

--- a/spec/.eslintrc.json
+++ b/spec/.eslintrc.json
@@ -34,8 +34,7 @@
       "jequal": true,
       "create": true,
       "arrayContains": true,
-      "databaseAdapter": true,
-      "requestWithExpectedError": true
+      "databaseAdapter": true
     },
     "rules": {
       "no-console": [0],
