--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,12 +23,11 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-    # Initialize the CodeQL tools for scanning
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
       with:
         languages: ${{ matrix.language }}
-        paths: src
+        source-root: src
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
   check-ci:
