--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "cors": "2.8.5",
     "deepcopy": "2.1.0",
     "express": "4.18.1",
-    "express-rate-limit": "^6.6.0",
+    "express-rate-limit": "6.6.0",
     "follow-redirects": "1.15.1",
     "graphql": "16.6.0",
     "graphql-list-fields": "2.0.2",
