--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+    - name: ${{ github.event.pull_request.user.login || '' }}-${{ github.head_ref || github.ref_name }}-{{github.run-name}}
+      run: echo Hello world
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
       with:
@@ -281,5 +283,5 @@ jobs:
           CI: true
       - run: bash <(curl -s https://codecov.io/bash)
 concurrency:
-  group: ${{ github.event.pull_request.user.login || '' }}-${{ github.head_ref || github.ref_name }}
+  group: ${{ github.event.pull_request.user.login || '' }}-${{ github.head_ref || github.ref_name }}-{{github.run-name}}
   cancel-in-progress: true
