--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-    - name: ${{ github.event.pull_request.user.login || '' }}-${{ github.head_ref || github.ref_name }}-${{ github.run-name }}
-      run: echo Hello world
+    - name: ${{ github.event.pull_request.user.login || '' }}-${{ github.head_ref || github.ref_name }}-${{ github }}
+      run: echo github
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
       with:
