--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,12 +22,10 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
     - name: ${{ github.event.pull_request.user.login || '' }}-${{ github.head_ref || github.ref_name }}-${{ github }}
-      run: |
-        for each in "${github[@]}"
-        do
-          echo "$each"
-        done
+      run: echo "$GITHUB_CONTEXT"
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
       with:
