--- a/package.json
+++ b/package.json
@@ -20,23 +20,20 @@
   "license": "BSD-3-Clause",
   "dependencies": {
     "@babel/eslint-parser": "7.19.1",
-    "@graphql-tools/merge": "8.3.6",
-    "@graphql-tools/schema": "9.0.4",
-    "@graphql-tools/utils": "8.12.0",
-    "@graphql-yoga/node": "2.6.0",
+    "@graphql-tools/schema": "9.0.12",
+    "@graphql-tools/utils": "9.1.3",
     "@parse/fs-files-adapter": "1.2.2",
     "@parse/push-adapter": "4.1.2",
+    "@whatwg-node/fetch": "0.5.3",
     "bcryptjs": "2.4.3",
-    "body-parser": "1.20.1",
     "commander": "5.1.0",
-    "cors": "2.8.5",
     "deepcopy": "2.1.0",
     "express": "4.18.2",
     "follow-redirects": "1.15.2",
     "graphql": "16.6.0",
     "graphql-list-fields": "2.0.2",
     "graphql-relay": "0.10.0",
-    "graphql-tag": "2.12.6",
+    "graphql-yoga": "3.1.1",
     "intersect": "1.0.1",
     "ip-range-check": "0.2.0",
     "jsonwebtoken": "8.5.1",
@@ -84,7 +81,6 @@
     "eslint": "8.26.0",
     "eslint-plugin-flowtype": "8.0.3",
     "flow-bin": "0.119.1",
-    "form-data": "3.0.0",
     "graphql-tag": "2.12.6",
     "husky": "4.3.8",
     "jasmine": "3.5.0",
@@ -97,8 +93,6 @@
     "mock-mail-adapter": "file:spec/dependencies/mock-mail-adapter",
     "mongodb-runner": "4.8.1",
     "mongodb-version-list": "1.0.0",
-    "node-fetch": "3.2.10",
-    "node-abort-controller": "3.0.1",
     "nyc": "15.1.0",
     "prettier": "2.0.5",
     "semantic-release": "17.4.6",
