--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   ],
   "license": "BSD-3-Clause",
   "dependencies": {
-    "@graphql-yoga/node": "2.6.0",
-    "@graphql-tools/utils": "8.12.0",
     "@graphql-tools/merge": "8.3.6",
     "@graphql-tools/schema": "9.0.4",
+    "@graphql-tools/utils": "8.12.0",
+    "@graphql-yoga/node": "2.6.0",
     "@parse/fs-files-adapter": "1.2.2",
     "@parse/push-adapter": "4.1.2",
+    "axios": "1.1.3",
     "bcryptjs": "2.4.3",
     "body-parser": "1.20.1",
     "commander": "5.1.0",
@@ -34,8 +35,8 @@
     "follow-redirects": "1.15.2",
     "graphql": "16.6.0",
     "graphql-list-fields": "2.0.2",
-    "graphql-tag": "2.12.6",
     "graphql-relay": "0.10.0",
+    "graphql-tag": "2.12.6",
     "intersect": "1.0.1",
     "jsonwebtoken": "8.5.1",
     "jwks-rsa": "2.1.5",
