--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,51 +121,42 @@ jobs:
     strategy:
       matrix:
         include:
-          - name: MongoDB 4.2, ReplicaSet, WiredTiger
+          - name: MongoDB 4.2, ReplicaSet
             MONGODB_VERSION: 4.2.19
             MONGODB_TOPOLOGY: replicaset
-            MONGODB_STORAGE_ENGINE: wiredTiger
             NODE_VERSION: 18.1.0
-          - name: MongoDB 4.4, ReplicaSet, WiredTiger
+          - name: MongoDB 4.4, ReplicaSet
             MONGODB_VERSION: 4.4.13
             MONGODB_TOPOLOGY: replicaset
-            MONGODB_STORAGE_ENGINE: wiredTiger
             NODE_VERSION: 18.1.0
-          - name: MongoDB 5, ReplicaSet, WiredTiger
+          - name: MongoDB 5, ReplicaSet
             MONGODB_VERSION: 5.3.2
             MONGODB_TOPOLOGY: replicaset
-            MONGODB_STORAGE_ENGINE: wiredTiger
             NODE_VERSION: 18.1.0
-          - name: MongoDB 6, ReplicaSet, WiredTiger
+          - name: MongoDB 6, ReplicaSet
             MONGODB_VERSION: 6.0.2
             MONGODB_TOPOLOGY: replicaset
-            MONGODB_STORAGE_ENGINE: wiredTiger
             NODE_VERSION: 18.1.0
           - name: Redis Cache
             PARSE_SERVER_TEST_CACHE: redis
             MONGODB_VERSION: 4.4.13
             MONGODB_TOPOLOGY: standalone
-            MONGODB_STORAGE_ENGINE: wiredTiger
             NODE_VERSION: 18.1.0
           - name: Node 12
             MONGODB_VERSION: 4.4.13
             MONGODB_TOPOLOGY: standalone
-            MONGODB_STORAGE_ENGINE: wiredTiger
             NODE_VERSION: 12.22.11
           - name: Node 14
             MONGODB_VERSION: 4.4.13
             MONGODB_TOPOLOGY: standalone
-            MONGODB_STORAGE_ENGINE: wiredTiger
             NODE_VERSION: 14.19.1
           - name: Node 16
             MONGODB_VERSION: 4.4.13
             MONGODB_TOPOLOGY: standalone
-            MONGODB_STORAGE_ENGINE: wiredTiger
             NODE_VERSION: 16.14.2
           - name: Node 17
             MONGODB_VERSION: 4.4.13
             MONGODB_TOPOLOGY: standalone
-            MONGODB_STORAGE_ENGINE: wiredTiger
             NODE_VERSION: 17.9.0
       fail-fast: false
     name: ${{ matrix.name }}
