--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "{src,spec}/{**/*,*}.js": [
       "prettier --write",
       "eslint --fix --cache",
+      "npm run ci:definitionsCheck",
       "git add"
     ]
   }
