Revert "Merge branch 'alpha' into pr/8332"
This reverts commit a576f728d885d332ad5004beead99abc485502f0, reversing
changes made to d156f29418d820f9832e5fa3f32654d262338f7e.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,14 +5,13 @@
         "node": true,
         "es6": true
     },
-    "parser": "@babel/eslint-parser",
+    "parser": "babel-eslint",
     "plugins": [
         "flowtype"
     ],
     "parserOptions": {
         "ecmaVersion": 6,
-        "sourceType": "module",
-        "requireConfigFile": false
+        "sourceType": "module"
     },
     "rules": {
         "indent": ["error", 2, { "SwitchCase": 1 }],
