--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parse-server",
-  "version": "6.0.0-alpha.28",
+  "version": "6.0.0-alpha.16",
   "description": "An express module providing a Parse-compatible API server",
   "main": "lib/index.js",
   "repository": {
@@ -19,7 +19,6 @@
   ],
   "license": "BSD-3-Clause",
   "dependencies": {
-    "@babel/eslint-parser": "7.19.1",
     "@graphql-tools/merge": "8.3.6",
     "@graphql-tools/schema": "9.0.4",
     "@graphql-tools/utils": "8.12.0",
@@ -32,7 +31,6 @@
     "cors": "2.8.5",
     "deepcopy": "2.1.0",
     "express": "4.18.2",
-    "express-rate-limit": "6.6.0",
     "follow-redirects": "1.15.2",
     "graphql": "16.6.0",
     "graphql-list-fields": "2.0.2",
@@ -49,7 +47,6 @@
     "mongodb": "4.10.0",
     "mustache": "4.2.0",
     "parse": "4.0.0",
-    "path-to-regexp": "0.1.7",
     "pg-monitor": "1.5.0",
     "pg-promise": "10.12.1",
     "pluralize": "8.0.0",
@@ -66,7 +63,7 @@
     "@actions/core": "1.9.1",
     "@apollo/client": "3.6.1",
     "@babel/cli": "7.10.0",
-    "@babel/core": "7.20.2",
+    "@babel/core": "7.10.0",
     "@babel/plugin-proposal-object-rest-spread": "7.10.0",
     "@babel/plugin-transform-flow-strip-types": "7.9.0",
     "@babel/preset-env": "7.10.0",
@@ -79,12 +76,14 @@
     "@semantic-release/npm": "7.1.3",
     "@semantic-release/release-notes-generator": "9.0.3",
     "all-node-versions": "8.0.0",
-    "apollo-upload-client": "17.0.0",
+    "apollo-upload-client": "16.0.0",
+    "apollo-utilities": "1.3.4",
+    "babel-eslint": "10.1.0",
     "bcrypt-nodejs": "0.0.3",
     "cross-env": "7.0.2",
     "deep-diff": "1.0.2",
-    "eslint": "8.26.0",
-    "eslint-plugin-flowtype": "8.0.3",
+    "eslint": "6.8.0",
+    "eslint-plugin-flowtype": "5.1.3",
     "flow-bin": "0.119.1",
     "form-data": "3.0.0",
     "graphql-tag": "2.12.6",
@@ -99,8 +98,8 @@
     "mock-mail-adapter": "file:spec/dependencies/mock-mail-adapter",
     "mongodb-runner": "4.8.1",
     "mongodb-version-list": "1.0.0",
-    "node-abort-controller": "3.0.1",
     "node-fetch": "3.2.10",
+    "node-abort-controller": "3.0.1",
     "nyc": "15.1.0",
     "prettier": "2.0.5",
     "semantic-release": "17.4.6",
